manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openlab-rest
  name: openlab-rest
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: openlab-rest
  type: ClusterIP
status:
  loadBalancer: {}
