manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: openlab-rest
  annotations:
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - openlapp.lab.weltraumpflege.org
    secretName: openlab-app-rest
  rules:
  - host: openlapp.ola.lol
    http:
      paths:
      - backend:
          service:
            name: openlab-rest
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: openlapp.lab.weltraumpflege.org
    http:
      paths:
      - backend:
          service:
            name: openlab-rest
            port:
              number: 8080
        path: /
        pathType: Prefix
         
status:
  loadBalancer: {}
